Added stock images

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
     <!-- What we do section -->
     <div class="row no-gutters justify-content-center" style="padding:30px 0px; background:#525C29;">
   <div class="col-md-4">
-      <img src="https://images.metmuseum.org/CRDImages/es/original/DP319890.jpg" class="img-fluid" alt="Stock Image">
+      <img src="/images/ancient-antique-art-265006.jpg" class="img-fluid" alt="Several highly decorative still life items arranged on a table">
   </div>
   <div class="col-md-4">
     <div class="card">
@@ -642,7 +642,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
       <div class="row justify-content-start">
         <div class="col-md-7 align-self-start" style="margin:30px">
           <div class="card text-center">
-          <img src="https://images.metmuseum.org/CRDImages/es/original/DP319890.jpg" class="card-img-top" alt="...">
+          <img src="/images/antiques-bookcase-books-1222551.jpg" class="card-img-top" alt="A shelf of dusty antique books">
           <div class="card-body">
             <h5 class="card-title">Antiques Research</h5>
             <p class="card-text">So you've stumbled upon something in your grandmother's basement. It looks old, and is definitely an intriguing mystery, not unlike your grandmother. It's a little dusty, sure, but you are itching to know its story. We would love to dig up that history for you. Send us an inquiry to learn more.</p>
@@ -656,7 +656,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
     <div class="row justify-content-end">
       <div class="col-md-7 align-self-end" style="margin:30px">
   <div class="card text-center">
-    <img src="https://images.metmuseum.org/CRDImages/es/original/DP319890.jpg" class="card-img-top" alt="...">
+    <img src="/images/antique-audio-chair-594388.jpg" class="card-img-top" alt="A gramophone on a table in front of some loud wallpaper">
     <div class="card-body">
       <h5 class="card-title">Valuation Services</h5>
       <p class="card-text">We've all seen and loved Antiques Roadshow, and wondered if that weird old knick-knack on your uncle's shelf has more than sentimental value. If you're just feeling curious, let us know and we'll be happy to use our market expertise and research experience to find out how much it's worth. </p>
@@ -670,7 +670,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
     <div class="row justify-content-start">
     <div class="col-md-7 align-self-start" style="margin:30px">
   <div class="card text-center">
-    <img src="https://images.metmuseum.org/CRDImages/es/original/DP319890.jpg" style="height:auto; width:100%;"class="card-img-top" alt="...">
+    <img src="/images/antique-camera-classic-242433.jpg" style="height:auto; width:100%;"class="card-img-top" alt="An antique camera on top of a photo album">
     
     <div class="card-body">
       <h5 class="card-title">Full Appraisal Reports</h5>
