--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
     </div>
   </div>
     <div class="col-md-5">
-      <img src="https://images.metmuseum.org/CRDImages/es/original/DP319890.jpg" class="img-fluid" alt="Stock Image">
+      <img src="/images/FB_IMG_1532713808339.jpg" class="img-fluid" alt="A portrait of Danielle Cox">
   </div>
 </div>
     </div>
