Add social media

--- a/index.html
+++ b/index.html
@@ -706,6 +706,22 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
       </div>
       <div class="col">
         <!--ADD SOCIAL MEDIA BUTTONS-->
+        <a href="[full link to your Twitter]">
+	<img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="35" height="35" />
+	</a>
+	<a href="[full link to your Pinterest]">
+	<img title="Pinterest" alt="Pinterest" src="https://socialmediawidgets.files.wordpress.com/2014/03/13_pinterest.png" width="35" height="35" />
+	</a>
+	<a href="[full link to your Facebook page]">
+	<img title="Facebook" alt="Facebook" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="35" height="35" />
+	</a>
+	<a href="[full link to your LinkedIn]">
+	<img title="LinkedIn" alt="LinkedIn" src="https://socialmediawidgets.files.wordpress.com/2014/03/07_linkedin.png" width="35" height="35" />
+	</a>
+	<a href="[full link to your Instagram]">
+	<img title="Instagram" alt="RSS" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="35" height="35" />
+	</a>
+	</div>
       </div>
       <div class="col-md-2">
     <a href="https://www.isa-appraisers.org/find-an-appraiser/profile/11722/danielle-cox"> <img src="https://www.isa-appraisers.org/content/images/cms/isa_logo_member_positive.jpg/isa_logo_member_positive-full;size$350,181.ImageHandler" alt="ISA Member Designation" class="img-fluid" style="max-width:100%; height:auto; padding:8px"></a>
