--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
   <!-- Footer -->
   <div class="container-fluid navbar-light bg-light">
     <div class="row align-items-center">
-      <div class="col">
+      <div class="col-md-3">
     <p style="font-size:15px">Copyright 2019 Down From The Attic</p>
         <p class="text-muted" style="font-size:10px">I coded this website myself from scratch using Bootstrap, so please be patient with any bugs.</p>
       </div>
