--- a/index.html
+++ b/index.html
@@ -700,11 +700,10 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
   <!-- Footer -->
   <div class="container-fluid navbar-light bg-light">
     <div class="row align-items-center">
-      <div class="col-md-3">
-    <p style="font-size:15px">Copyright 2019 Down From The Attic</p>
-        <p class="text-muted" style="font-size:10px">I coded this website myself from scratch using Bootstrap, so please be patient with any bugs.</p>
-      </div>
       <div class="col">
+    <p style="font-size:15px">Copyright 2019 Down From The Attic</p>
+      </div>
+      <div class="col justify-content-center">
         <!--ADD SOCIAL MEDIA BUTTONS-->
         <a href="[full link to your Twitter]">
 	<img title="Twitter" alt="Twitter" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="35" height="35" />
@@ -723,11 +722,14 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
 	</a>
 	</div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 justify-content-end">
     <a href="https://www.isa-appraisers.org/find-an-appraiser/profile/11722/danielle-cox"> <img src="https://www.isa-appraisers.org/content/images/cms/isa_logo_member_positive.jpg/isa_logo_member_positive-full;size$350,181.ImageHandler" alt="ISA Member Designation" class="img-fluid" style="max-width:100%; height:auto; padding:8px"></a>
     </div>
   </div>
   </div>
+<div class="row">
+	<p class="text-muted" style="font-size:10px">I coded this website myself from scratch using Bootstrap, so please be patient with any bugs.</p>
+</div>
   </div>
   </body>
 </html>
