--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
         <a class="nav-link" href="#">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="/contact.html">Contact</a>
       </li>
     </ul>
   </div>
