--- a/contact.html
+++ b/contact.html
@@ -327,7 +327,7 @@ m119 -1401 c7 -7 5 -10 -5 -10 -9 0 -24 -9 -33 -19 -10 -11 -31 -23 -46 -26
     <div class="container" style="padding:10px">
       <h1>Contact</h1>
     </div>
-    <form action="contact.php" method="post" style="padding:10px">
+    <form name="Contact_Form" action="contact.php" method="post" style="padding:10px">
   <div class="form-row  justify-content-center">
     <div class="form-group col-md-4">
       
